project4-helm/ingress-118.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /apple
        pathType: Prefix
        backend:
          serviceName: apple-service
          servicePort: 5679
      - path: /banana
        pathType: Prefix
        backend:
          serviceName: banana-service
          servicePort: 5679
