project4-helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /apple
        pathType: Prefix
        backend:
          service:
            name: apple-service
            port:
              number: 5678
      - path: /banana
        pathType: Prefix
        backend:
          service:
            name: banana-service
            port:
              number: 5678
      - path: /blog
        pathType: Prefix
        backend:
          service:
            name: node-blog-app
            port:
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: node-api-app
            port:
              number: 3000
